# craftip

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: compile.yml  docker.yaml  docker.yml
client/: Cargo.toml
client-gui/: Cargo.toml  build.rs
client-gui/src/: backend.rs  config.rs  eula.rs  gui_channel.rs  help_popup.rs  main.rs  updater.rs  updater_gui.rs  updater_proto.rs
client/src/: client.rs  connection_handler.rs  main.rs  structs.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  connection_handler.rs  main.rs  structs.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: addressing.rs  config.rs  crypto.rs  datatypes.rs  minecraft.rs  packet_codec.rs  socket_packet.rs  test.rs
crates/updater/: Cargo.toml
crates/updater/src/: config.rs  lib.rs  reporter.rs  updater.rs
server/: Cargo.toml
server/src/: client_handler.rs  disconnect_client.rs  main.rs  process_socket.rs  proxy_handler.rs  register.rs
shared/: Cargo.toml
shared/src/: addressing.rs  config.rs  crypto.rs  cursor.rs  datatypes.rs  minecraft.rs  packet_codec.rs  proxy.rs  socket_packet.rs  test.rs
util/update-tool/: Cargo.toml
util/update-tool/src/: main.rs
