[package]
name = "client-gui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.78", features = [] }
tokio = { version = "1.35", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
eframe = { version = "0.29", default-features = false, features = ["persistence", "wgpu", "accesskit", "default_fonts"]}
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = [] }
tempfile = "3.9.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }


shared = { path = "../shared" }
client = { path = "../client" }
image = "0.24.8"
current_platform = "0.2.0"
semver = "1.0.22"
self-replace = "1.3.7"
bytes = "1.5.0"
base64 = "0.22.1"
ring = "0.17.7"
zip = "2.2.0"

[build-dependencies]
winres = "0.1"