[package]
name = "client-gui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.78", features = [] }
tokio = { version = "1.35", features = ["tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
eframe = { version = "0.29.1", default-features = false, features = ["persistence", "wgpu", "accesskit", "default_fonts"]}
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = [] }
tempfile = "3.9.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }


shared = { path = "../shared" }
client = { path = "../client" }
image = { version = "0.25.2", default-features = false, features = ["png"] }
current_platform = "0.2.0"
semver = "1.0.22"
self-replace = "1.3.7"
bytes = "1.5.0"
base64 = "0.22.1"
ring = "0.17.7"
rust-lzma = { version = "0.6.0", features = ["static"] }
thiserror = "1.0.64"

[build-dependencies]
winres = "0.1"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = true