[package]
name = "client-gui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.78", features = [] }
tokio = { version = "1.35", features = ["tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
# for linux support, check dependencies again
eframe = { version = "0.25.0", default-features = false, features = ["persistence", "wgpu", "accesskit", "default_fonts"]}
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = [] }
image = { version = "0.25.2", default-features = false, features = ["png"] }

shared = { path = "../shared" }
client = { path = "../client" }

ureq = { version = "3.0.0-rc1", default-features = false, features = ["json", "rustls"] }
tempfile = "3.9.0"
current_platform = "0.2.0"
semver = "1.0.22"
self-replace = "1.3.7"
base64 = "0.22.1"
ring = "0.17.7"
liblzma = { version = "0.3.4", features = ["static"] }
thiserror = "1.0.64"

[build-dependencies]
winres = "0.1"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
#lto = 'fat'
opt-level = 's'
overflow-checks = true